==> 7134956/nand_programmer/firmware/programmer/fsmc_nand.c <==
#include "fsmc_nand.h"
#include "log.h"
#include "ch32v30x.h"
#define CMD_AREA                   (uint32_t)(1<<16)  /* A16 = CLE  high */
#define ADDR_AREA                  (uint32_t)(1<<17)  /* A17 = ALE high */
#define DATA_AREA                  ((uint32_t)0x00000000)
#define NAND_ERROR                 ((uint32_t)0x00000001)
#define NAND_READY                 ((uint32_t)0x00000040)
#define ADDR_1st_CYCLE(ADDR)       (uint8_t)((ADDR)& 0xFF)
#define ADDR_2nd_CYCLE(ADDR)       (uint8_t)(((ADDR)& 0xFF00) >> 8)
#define ADDR_3rd_CYCLE(ADDR)       (uint8_t)(((ADDR)& 0xFF0000) >> 16)
#define ADDR_4th_CYCLE(ADDR)       (uint8_t)(((ADDR)& 0xFF000000) >> 24)
#define FSMC_Bank_NAND     FSMC_Bank2_NAND
#define Bank_NAND_ADDR     Bank2_NAND_ADDR
#define Bank2_NAND_ADDR    ((uint32_t)0x70000000)
#define ROW_ADDRESS (addr.page + (addr.block + (addr.zone * NAND_ZONE_SIZE)) * \
    NAND_BLOCK_SIZE)
#define UNDEFINED_CMD 0xFF

static void nand_gpio_init(void)
{
    GPIO_InitTypeDef gpio_init;

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOD | RCC_APB2Periph_GPIOE, ENABLE);

    gpio_init.GPIO_Pin =
		GPIO_Pin_0		//FSMC_D2
		| GPIO_Pin_1	//FSMC_D3
		| GPIO_Pin_4	//FSMC_NOE
		| GPIO_Pin_5	//FSMC_NWE
		| GPIO_Pin_7	//FSMC_NCE2
		| GPIO_Pin_8	//FSMC_D13
		| GPIO_Pin_9	//FSMC_D14
		| GPIO_Pin_10	//FSMC_D15
		| GPIO_Pin_11	//FSMC_CLE
		| GPIO_Pin_12	//FSMC_ALE
		| GPIO_Pin_14	//FSMC_D0
		| GPIO_Pin_15;	//FSMC_D1
    gpio_init.GPIO_Speed = GPIO_Speed_50MHz;
    gpio_init.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_Init(GPIOD, &gpio_init);


    gpio_init.GPIO_Pin =
		GPIO_Pin_7		//FSMC_D4
		| GPIO_Pin_8	//FSMC_D5
		| GPIO_Pin_9	//FSMC_D6
		| GPIO_Pin_10	//FSMC_D7
		| GPIO_Pin_11	//FSMC_D8
		| GPIO_Pin_12	//FSMC_D9
		| GPIO_Pin_13	//FSMC_D10
		| GPIO_Pin_14	//FSMC_D11
		| GPIO_Pin_15;	//FSMC_D12
    GPIO_Init(GPIOE, &gpio_init);

    /* NWAIT NAND pin configuration */
    gpio_init.GPIO_Pin = GPIO_Pin_6;
    gpio_init.GPIO_Speed = GPIO_Speed_50MHz;
    gpio_init.GPIO_Mode = GPIO_Mode_IPU;
    GPIO_Init(GPIOD, &gpio_init);

    /* INT2 NAND pin configuration, not available in LQFP100 */
#if 0
    gpio_init.GPIO_Pin = GPIO_Pin_6;
    GPIO_Init(GPIOG, &gpio_init);
#endif

}

static void nand_fsmc_init()
{
    FSMC_NANDInitTypeDef fsmc_init;
    FSMC_NAND_PCCARDTimingInitTypeDef timing_init;

    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_FSMC, ENABLE);

    timing_init.FSMC_SetupTime = fsmc_conf.setup_time;
    timing_init.FSMC_WaitSetupTime = fsmc_conf.wait_setup_time;
    timing_init.FSMC_HoldSetupTime = fsmc_conf.hold_setup_time;
    timing_init.FSMC_HiZSetupTime = fsmc_conf.hi_z_setup_time;

    fsmc_init.FSMC_Bank = FSMC_Bank2_NAND;
    fsmc_init.FSMC_Waitfeature = FSMC_Waitfeature_Enable;
    fsmc_init.FSMC_MemoryDataWidth = FSMC_MemoryDataWidth_8b;
    fsmc_init.FSMC_ECC = FSMC_ECC_Enable;
    fsmc_init.FSMC_ECCPageSize = FSMC_ECCPageSize_2048Bytes;
    fsmc_init.FSMC_TCLRSetupTime = fsmc_conf.clr_setup_time;
    fsmc_init.FSMC_TARSetupTime = fsmc_conf.ar_setup_time;
    fsmc_init.FSMC_CommonSpaceTimingStruct = &timing_init;
    fsmc_init.FSMC_AttributeSpaceTimingStruct = &timing_init;
    FSMC_NANDInit(&fsmc_init);

    FSMC_NANDCmd(FSMC_Bank2_NAND, ENABLE);
}
